@@ -2,6 +2,9 @@
 
 * make dispatcher silent on terminal, only print unrecoverable startup errors
 * fix segfault on error reply from gearman
+* handle locks and deadlocks during query execution (sleep and retry on
+deadlock in child and retry lock in child)
+* improve handling of sql errors in main dispatcher loop
 
 2009-07-29 dispatcher 0.9.97.2
 
